--- a/app/portal/templates/index.html
+++ b/app/portal/templates/index.html
@@ -118,16 +118,16 @@
                     </div>
                     <div class="col-xl-5 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="bg-primary rounded position-relative overflow-hidden">
-                            <img src="img/about-2.png" class="img-fluid rounded w-100" alt="">
+                            <img src="{{ url_for('static', filename='img/about-2.png') }}" class="img-fluid rounded w-100" alt="">
                             
                             <div class="" style="position: absolute; top: -15px; right: -15px;">
-                                <img src="img/about-3.png" class="img-fluid" style="width: 150px; height: 150px; opacity: 0.7;" alt="">
+                                <img src="{{ url_for('static', filename='img/about-3.png') }}" class="img-fluid" style="width: 150px; height: 150px; opacity: 0.7;" alt="">
                             </div>
                             <div class="" style="position: absolute; top: -20px; left: 10px; transform: rotate(90deg);">
-                                <img src="img/about-4.png" class="img-fluid" style="width: 100px; height: 150px; opacity: 0.9;" alt="">
+                                <img src="{{ url_for('static', filename='img/about-4.png') }}" class="img-fluid" style="width: 100px; height: 150px; opacity: 0.9;" alt="">
                             </div>
                             <div class="rounded-bottom">
-                                <img src="img/about-5.jpg" class="img-fluid rounded-bottom w-100" alt="">
+                                <img src="{{ url_for('static', filename='img/about-5.png') }}" class="img-fluid rounded-bottom w-100" alt="">
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="{{ url_for('static', filename='img/service-1.jpg') }}" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Strategy Consulting</a>
@@ -162,7 +162,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="{{ url_for('static', filename='img/service-2.jpg') }}" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Financial Advisory</a>
@@ -175,7 +175,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="{{ url_for('static', filename='img/service-3.jpg') }}" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Managements</a>
@@ -188,7 +188,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="{{ url_for('static', filename='img/service-4.jpg') }}" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Supply Optimization</a>
@@ -201,7 +201,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-5.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="{{ url_for('static', filename='img/service-5.jpg') }}" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Hr Consulting</a>
@@ -214,7 +214,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-6.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="{{ url_for('static', filename='img/service-6.jpg') }}" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Marketing Consulting</a>
@@ -320,7 +320,7 @@
                             <div id="collapseOne" class="tab-pane fade show p-0 active">
                                 <div class="row g-4">
                                     <div class="col-md-7">
-                                        <img src="img/offer-1.jpg" class="img-fluid w-100 rounded" alt="">
+                                        <img src="{{ url_for('static', filename='img/offer-1.jpg') }}" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">The stock market provides a venue...</h1>
@@ -333,7 +333,7 @@
                             <div id="collapseTwo" class="tab-pane fade show p-0">
                                 <div class="row g-4">
                                     <div class="col-md-7">
-                                        <img src="img/offer-2.jpg" class="img-fluid w-100 rounded" alt="">
+                                        <img src="{{ url_for('static', filename='img/offer-2.jpg') }}" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">The stock market provides a venue...</h1>
@@ -346,7 +346,7 @@
                             <div id="collapseThree" class="tab-pane fade show p-0">
                                 <div class="row g-4">
                                     <div class="col-md-7">
-                                        <img src="img/offer-3.jpg" class="img-fluid w-100 rounded" alt="">
+                                        <img src="{{ url_for('static', filename='img/offer-3.jpg') }}" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">The stock market provides a venue...</h1>
@@ -359,7 +359,7 @@
                             <div id="collapseFour" class="tab-pane fade show p-0">
                                 <div class="row g-4">
                                     <div class="col-md-7">
-                                        <img src="img/offer-4.jpg" class="img-fluid w-100 rounded" alt="">
+                                        <img src="{{ url_for('static', filename='img/offer-4.jpg') }}" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">The stock market provides a venue...</h1>
@@ -388,7 +388,7 @@
                 <div class="owl-carousel blog-carousel wow fadeInUp" data-wow-delay="0.2s">
                     <div class="blog-item p-4">
                         <div class="blog-img mb-4">
-                            <img src="img/service-1.jpg" class="img-fluid w-100 rounded" alt="">
+                            <img src="{{ url_for('static', filename='img/service-1.jpg') }}" class="img-fluid w-100 rounded" alt="">
                             <div class="blog-title">
                                 <a href="#" class="btn">Dividend Stocks</a>
                             </div>
@@ -397,7 +397,7 @@
                         <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore aut aliquam suscipit error corporis accusamus labore....
                         </p>
                         <div class="d-flex align-items-center">
-                            <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
+                            <img src="{{ url_for('static', filename='img/testimonial-1.jpg') }}" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
                             <div class="ms-3">
                                 <h5>Admin</h5>
                                 <p class="mb-0">October 9, 2025</p>
@@ -406,7 +406,7 @@
                     </div>
                     <div class="blog-item p-4">
                         <div class="blog-img mb-4">
-                            <img src="img/service-2.jpg" class="img-fluid w-100 rounded" alt="">
+                            <img src="{{ url_for('static', filename='img/service-2.jpg') }}" class="img-fluid w-100 rounded" alt="">
                             <div class="blog-title">
                                 <a href="#" class="btn">Non-Dividend Stocks</a>
                             </div>
@@ -415,7 +415,7 @@
                         <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore aut aliquam suscipit error corporis accusamus labore....
                         </p>
                         <div class="d-flex align-items-center">
-                            <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
+                            <img src="{{ url_for('static', filename='img/testimonial-2.jpg') }}" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
                             <div class="ms-3">
                                 <h5>Admin</h5>
                                 <p class="mb-0">October 9, 2025</p>
@@ -424,7 +424,7 @@
                     </div>
                     <div class="blog-item p-4">
                         <div class="blog-img mb-4">
-                            <img src="img/service-3.jpg" class="img-fluid w-100 rounded" alt="">
+                            <img src="{{ url_for('static', filename='img/service-3.jpg') }}" class="img-fluid w-100 rounded" alt="">
                             <div class="blog-title">
                                 <a href="#" class="btn">Dividend Stocks</a>
                             </div>
@@ -433,7 +433,7 @@
                         <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore aut aliquam suscipit error corporis accusamus labore....
                         </p>
                         <div class="d-flex align-items-center">
-                            <img src="img/testimonial-3.jpg" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
+                            <img src="{{ url_for('static', filename='img/testimonial-3.jpg') }}" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
                             <div class="ms-3">
                                 <h5>Admin</h5>
                                 <p class="mb-0">October 9, 2025</p>
@@ -442,7 +442,7 @@
                     </div>
                     <div class="blog-item p-4">
                         <div class="blog-img mb-4">
-                            <img src="img/service-4.jpg" class="img-fluid w-100 rounded" alt="">
+                            <img src="{{ url_for('static', filename='img/service-4.jpg') }}" class="img-fluid w-100 rounded" alt="">
                             <div class="blog-title">
                                 <a href="#" class="btn">Non-Dividend Stocks</a>
                             </div>
@@ -451,7 +451,7 @@
                         <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore aut aliquam suscipit error corporis accusamus labore....
                         </p>
                         <div class="d-flex align-items-center">
-                            <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
+                            <img src="{{ url_for('static', filename='img/testimonial-2.jpg') }}" class="img-fluid rounded-circle" style="width: 60px; height: 60px;" alt="">
                             <div class="ms-3">
                                 <h5>Admin</h5>
                                 <p class="mb-0">October 9, 2025</p>
@@ -540,7 +540,7 @@
                     </div>
                     <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="bg-primary rounded">
-                            <img src="img/about-2.png" class="img-fluid w-100" alt="">
+                            <img src="{{ url_for('static', filename='img/about-2.png') }}" class="img-fluid w-100" alt="">
                         </div>
                     </div>
                 </div>
@@ -562,7 +562,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-1.jpg" class="img-fluid" alt="">
+                                <img src="{{ url_for('static', filename='img/team-1.jpg') }}" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">David James</h4>
@@ -579,7 +579,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-2.jpg" class="img-fluid" alt="">
+                                <img src="{{ url_for('static', filename='img/team-2.jpg') }}" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">David James</h4>
@@ -596,7 +596,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-3.jpg" class="img-fluid" alt="">
+                                <img src="{{ url_for('static', filename='img/team-3.jpg') }}" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">David James</h4>
@@ -613,7 +613,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-4.jpg" class="img-fluid" alt="">
+                                <img src="{{ url_for('static', filename='img/team-4.jpg') }}" class="img-fluid" alt="">
                             </div>
                             <div class="team-title">
                                 <h4 class="mb-0">David James</h4>
@@ -647,7 +647,7 @@
                             <i class="fas fa-quote-left fa-2x"></i>
                         </div>
                         <div class="testimonial-img">
-                            <img src="img/testimonial-1.jpg" class="img-fluid" alt="Image">
+                            <img src="{{ url_for('static', filename='img/testimonial-1.jpg') }}" class="img-fluid" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis blanditiis excepturi quisquam temporibus voluptatum reprehenderit culpa, quasi corrupti laborum accusamus.
@@ -675,7 +675,7 @@
                             <i class="fas fa-quote-left fa-2x"></i>
                         </div>
                         <div class="testimonial-img">
-                            <img src="img/testimonial-2.jpg" class="img-fluid" alt="Image">
+                            <img src="{{ url_for('static', filename='img/testimonial-2.jpg') }}" class="img-fluid" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis blanditiis excepturi quisquam temporibus voluptatum reprehenderit culpa, quasi corrupti laborum accusamus.
@@ -703,7 +703,7 @@
                             <i class="fas fa-quote-left fa-2x"></i>
                         </div>
                         <div class="testimonial-img">
-                            <img src="img/testimonial-3.jpg" class="img-fluid" alt="Image">
+                            <img src="{{ url_for('static', filename='img/testimonial-3.jpg') }}" class="img-fluid" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis blanditiis excepturi quisquam temporibus voluptatum reprehenderit culpa, quasi corrupti laborum accusamus.
@@ -731,7 +731,7 @@
                             <i class="fas fa-quote-left fa-2x"></i>
                         </div>
                         <div class="testimonial-img">
-                            <img src="img/testimonial-2.jpg" class="img-fluid" alt="Image">
+                            <img src="{{ url_for('static', filename='img/testimonial-2.jpg') }}" class="img-fluid" alt="Image">
                         </div>
                         <div class="testimonial-text">
                             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis blanditiis excepturi quisquam temporibus voluptatum reprehenderit culpa, quasi corrupti laborum accusamus.
