--- a/app/portal/templates/index.html
+++ b/app/portal/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} TestLab {% endblock %}
+{% block title %} Socket {% endblock %}
 {% block content %}
         
                 <!-- Carousel Start -->
@@ -758,8 +758,6 @@
             </div>
         </div>
         <!-- Testimonial End -->
-        
-       
-
+            
     
 {% endblock %}
