--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,7 +59,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary"><i class="fas fa-search-dollar me-3"></i>Stocker</h1>
+                    <h1 class="text-primary"><i class="fas fa-search-dollar me-3"></i>Stocket</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -67,25 +67,30 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Inicio</a>
-                        <a href="about.html" class="nav-item nav-link">Quienes Somos</a>
+                        <a href="{{ url_for('portalprincipal.index') }}" class="nav-item nav-link active">Inicio</a>
+                        <a href="{{ url_for('portalprincipal.quienes') }}" class="nav-item nav-link">Quienes Somos</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                 <span class="dropdown-toggle">Servicios</span>
                             </a>
                             <div class="dropdown-menu m-0">
-                                <a href="feature.html" class="dropdown-item">Our Features</a>
-                                <a href="team.html" class="dropdown-item">Our team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="offer.html" class="dropdown-item">Our offer</a>
-                                <a href="FAQ.html" class="dropdown-item">FAQs</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a href="feature.html" class="dropdown-item">Automatizaciones</a>
+                                <a href="offer.html" class="dropdown-item">Asesoria Juridica</a>
+                                <a href="team.html" class="dropdown-item">Backups de Informacion</a>
+                                <a href="testimonial.html" class="dropdown-item">Diseño de Sistemas Electricos</a>
+                                <a href="offer.html" class="dropdown-item">Instalacion de sistemas Operativos</a>
+                                <a href="FAQ.html" class="dropdown-item">Programacion de Plataformas Web</a>
+                                <a href="404.html" class="dropdown-item">Programacion de Apps</a>
+                                <a href="feature.html" class="dropdown-item">Redes Estructuradas</a>
+                                <a href="team.html" class="dropdown-item">Marketing Digital</a>
+                                <a href="testimonial.html" class="dropdown-item">Sistemas Contables</a>
+                                
+                                
                             </div>
                         </div>
-                        <a href="service.html" class="nav-item nav-link">contactos</a>
-                        <a href="blog.html" class="nav-item nav-link">Blogs</a>
                         
-                        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                        
+                        <a href="contact.html" class="nav-item nav-link">Contactanos </a>
                     </div>
                     <a href="#" class="btn btn-primary rounded-pill py-2 px-4 my-3 my-lg-0 flex-shrink-0">Get Started</a>
                 </div>
