--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,7 +90,7 @@
                         </div>
                         
                         
-                        <a href="contact.html" class="nav-item nav-link">Contactanos </a>
+                        <a href="{{ url_for('portalprincipal.contactanos') }}" class="nav-item nav-link">Contactanos </a>
                     </div>
                     <a href="#" class="btn btn-primary rounded-pill py-2 px-4 my-3 my-lg-0 flex-shrink-0">Get Started</a>
                 </div>
