--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -98,7 +98,9 @@
         </div>
 
 
-        {% block content %}{% endblock %}
+        {% block content %}
+        
+        {% endblock %}
 
 
         <!-- Footer Start -->
