--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-inline-flex align-items-center" style="height: 45px;">
-                        <a href="#"><small class="me-3 text-dark"><i class="fa fa-user text-primary me-2"></i>Register</small></a>
+                        <a href="{{ url_for('autenticar.registro') }}"><small class="me-3 text-dark"><i class="fa fa-user text-primary me-2"></i>Register</small></a>
                         <a href="{{ url_for('autenticar.login') }}"><small class="me-3 text-dark"><i class="fa fa-sign-in-alt text-primary me-2"></i>Login</small></a>
 
                     </div>
