--- a/app/templates/baselogin.html
+++ b/app/templates/baselogin.html
@@ -24,6 +24,8 @@
     {% endblock %}
 
     <!-- JS -->
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="{{ url_for('static', filename='js/login/login.js') }}"></script>
 </body>
 </html>
